<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/personaldetails"

            android:icon="@drawable/ic_baseline_person_outline_24"
            android:title="@string/personaldetails" />

        <item
            android:id="@+id/Self_Screening"
            android:icon="@drawable/ic_baseline_pan_tool_24"
            android:title="@string/SelfScreening" />
        <item
            android:id="@+id/nav_getQr"
            android:icon="@drawable/ic_baseline_qr_code_24"
            android:title="@string/menu_get_qr" />
        <item
            android:id="@+id/nav_vax_centre"
            android:icon="@drawable/ic_baseline_medical_services_24"
            android:title="@string/menu_find_vax" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/logout" />

    </group>
</menu>